Fixed hover links #fff to undefined because it overlaps other elements. (Original colour requested by magitam).

--- a/public/stylesheets/layout_stylesheet.css
+++ b/public/stylesheets/layout_stylesheet.css
@@ -169,7 +169,7 @@ min-height: 200px;
 }
 
 a, a:visited { color: #24913C; font-weight: bold; }
-a:hover { color: #A61000; background-color: #FFF;}
+a:hover { color: #A61000;}
 
 
 /* User data style moved.*/
